# vca

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
command/: CMakeLists.txt
command/src/: command.cpp
common/: CMakeLists.txt
common/vca/: result.h
core/: CMakeLists.txt
core/test/: result_test.cpp  string_test.cpp  utils_test.cpp
core/vca/: async.cpp  async.h  audio.cpp  audio.h  case_mappings.cpp  case_mappings.h  command_queue.cpp  command_queue.h  config.cpp  config.h  file_lock.cpp  file_lock.h  filesystem.cpp  filesystem.h  git.cpp.in  git.h  json.h  logging.cpp  logging.h  platform.h  result.cpp  result.h  sqlite_userdb.cpp  sqlite_userdb.h  string.cpp  string.h  time.h  userdb.cpp  userdb.h  utils.cpp  utils.h  zip_inflater.cpp  zip_inflater.h
daemon/: CMakeLists.txt
daemon/src/: daemon.cpp  default_tokenizer.h  docx_tokenizer.cpp  docx_tokenizer.h  file_processor.cpp  file_processor.h  file_scanner.cpp  file_scanner.h  file_watcher.cpp  file_watcher.h  filename_tokenizer.cpp  filename_tokenizer.h  http_server.cpp  http_server.h  main.cpp  pdf_tokenizer.cpp  pdf_tokenizer.h  scan.cpp  scan.h  server.cpp  server.h  tex_tokenizer.cpp  tex_tokenizer.h  tokenizer.h  txt_tokenizer.cpp  txt_tokenizer.h  uds_server.cpp  uds_server.h  xml_tokenizer.cpp  xml_tokenizer.h  zipxml_tokenizer.cpp  zipxml_tokenizer.h
data/: create_case_mappings.py
desktop/: CMakeLists.txt
desktop/src/: AppInput.qml  AppOutput.qml  Handler.cpp  Handler.h  HandlerFactory.cpp  HandlerFactory.h  Input.cpp  Input.h  Model.h  ModelImpl.cpp  ModelImpl.h  Output.cpp  Output.h  desktop.cpp  desktop.qml  main.cpp  resource.qrc  uds_client.cpp  uds_client.h
desktop/src/engine/: DaemonHandler.cpp  DaemonHandler.h  SearchHandler.cpp  SearchHandler.h  StatusHandler.cpp  StatusHandler.h
desktop/src/handler/: SearchInput.cpp  SearchInput.h  SearchOutput.cpp  SearchOutput.h  SettingsBar.cpp  SettingsBar.h  SettingsFoo.cpp  SettingsFoo.h
desktop/src/qtc/: Action.h  CommandQueue.cpp  CommandQueue.h  Handler.cpp  Handler.h  Input.cpp  Input.h  Model.cpp  Model.h  Node.h  NodeBase.cpp  NodeBase.h  Output.cpp  Output.h  ThreadPool.cpp  ThreadPool.h  UpdateType.h
desktop/src/view/: View.cpp  View.h
desktop/src/view/qml/: Main.qml  Style.qml  VcaBlocker.qml  VcaButton.qml  VcaCheckBox.qml  VcaComboBox.qml  VcaImage.qml  VcaInput.qml  VcaInputField.qml  VcaLabel.qml  VcaOutput.qml  VcaSettings.qml  VcaTextEdit.qml
test/data/Letters/: letter_ar.txt  letter_bn.txt  letter_de.txt  letter_en.txt  letter_es.txt  letter_fr.txt  letter_hi.txt  letter_id.txt  letter_ja.txt  letter_kr.txt  letter_pt.txt  letter_ru.txt  letter_zh_cn.txt  letter_zh_tw.txt
test/data/Presentations/: Portfolio.txt
test/data/Reports/: Project proposal.docx  Project proposal.epub  Project proposal.html  Project proposal.odt  Project proposal.txt
test/data/SpreadSheets/: Monthly budget - Summary.csv  Monthly budget - Summary.html  Monthly budget.ods  Monthly budget.xlsx  To-do list - To do.html  To-do list - To do.tsv  To-do list.ods  To-do list.xlsx
